# voxelnet

./: CMakeLists.txt  config.py  package.xml  ros_test.py  test.py  test_ros.py
data/: crop.py
model/: model.py
msg/: bbox.msg
utils/: bbox_handler.py  kitti_loader_original.py  utils.py
